--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,12 +32,14 @@ jobs:
           bun-version: latest
 
       - name: Install dependencies
-        run: bun install
-        working-directory: ./CS180_project0
+        run: |
+          cd CS180_project0
+          bun install
 
       - name: Build
-        run: bun run build
-        working-directory: ./CS180_project0
+        run: |
+          cd CS180_project0
+          bun run build
         env:
           NODE_ENV: production
 
